--- a/src/pages/services/services.html
+++ b/src/pages/services/services.html
@@ -15,7 +15,7 @@
 
 <ion-content padding>
   <ion-list>
-    <ion-item>
+    <ion-item (tap)="openDocument()">
       <ion-icon name="document" item-start></ion-icon>
       <h2>Tramites</h2>
     </ion-item>
