--- a/src/pages/services/services.html
+++ b/src/pages/services/services.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Services</ion-title>
+    <ion-title>Servicios</ion-title>
   </ion-navbar>
 
 </ion-header>
