--- a/src/pages/temas/temas.html
+++ b/src/pages/temas/temas.html
@@ -19,8 +19,8 @@
       <ion-avatar item-start>
         <img src={{tema.Img}}>
       </ion-avatar>
-      <h2>{{tema.Name}}</h2>
-      <p>{{tema.Title}}</p>
+      <h2 text-wrap>{{tema.Name}}</h2>
+      <p text-wrap>{{tema.Title}}</p>
       <ion-note item-end>{{tema.Timestamp | date}}</ion-note>
     </ion-item>
   </ion-list>
