--- a/src/pages/event-manager/event-manager.html
+++ b/src/pages/event-manager/event-manager.html
@@ -25,7 +25,7 @@
           </ion-item>
           <img src={{content.Img}}>
           <ion-item>
-            <h2>{{content.Title}}</h2>
+            <h2 text-wrap>{{content.Title}}</h2>
             <ion-badge>Costo: {{content.Cost}} </ion-badge>
           </ion-item>
         </div>
