--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -9,13 +9,13 @@
 <ion-content class="master" style="background-image: url('assets/imgs/background.png');">
   <ion-slides padding pager="true">
     <ion-slide>
-      <ion-img height="280" src="assets/imgs/region1.png"></ion-img>
+      <img class="slider" src="assets/imgs/region1.png">
     </ion-slide>
     <ion-slide>
-      <ion-img height="280" src="assets/imgs/region2.png"></ion-img>
+      <img class="slider" src="assets/imgs/region2.png">
     </ion-slide>
     <ion-slide>
-      <ion-img height="280" src="assets/imgs/region3.png"></ion-img>
+      <img  class="slider" src="assets/imgs/region3.png">
     </ion-slide>
   </ion-slides>
   <div padding class="LoginContainer">
