--- a/src/pages/messages/messages.html
+++ b/src/pages/messages/messages.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Messages</ion-title>
+    <ion-title>Mensajes</ion-title>
   </ion-navbar>
 
 </ion-header>
