--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Search</ion-title>
+    <ion-title>Busqueda</ion-title>
   </ion-navbar>
 </ion-header>
 
