--- a/src/pages/upload/upload.html
+++ b/src/pages/upload/upload.html
@@ -7,10 +7,10 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Upload</ion-title>
+    <ion-title>Subir Contenido</ion-title>
     <ion-buttons end>
-      <button ion-button icon-only clear (tap)="openSettings()">
-        Guardar
+      <button ion-button icon-only clear (tap)="postData()">
+        <ion-icon name="checkmark"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
@@ -22,5 +22,5 @@
   <img *ngIf="imgURL != ''" class="uploadImg" src={{imgURL}} (tap)=openGallery()>
   <div class="linebreaker"></div>
   <ion-input *ngIf="uploadType == 1" placeholder="Titulo" [(ngModel)] = title></ion-input>
-  <ion-textarea placeholder="Mensaje" floating text-wrap></ion-textarea>
+  <ion-textarea placeholder="Mensaje" floating text-wrap  [(ngModel)] = message></ion-textarea>
 </ion-content>
