--- a/src/pages/tema/tema.html
+++ b/src/pages/tema/tema.html
@@ -45,9 +45,9 @@
   </ion-item>
   <ion-item>
     <ion-avatar item-start>
-      <img src="{{userData.userData.Img}}">
+      <img src="{{userData.getSelectedAccount().Img}}">
     </ion-avatar>
-    <h2>{{userData.userData.Name}}</h2>
+    <h2>{{userData.getSelectedAccount().Name}}</h2>
     <ion-input placeholder="Escribe un Comentario" [(ngModel)]="comment"></ion-input>
     <button ion-button item-end (tap)="postComment()">
       <ion-icon name="send"></ion-icon>
