--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -15,9 +15,9 @@
 
 <ion-content padding>
   <ion-list>
-    <ion-item (tap)="openWebsite(Canalava)">Mas Informacion</ion-item>
-    <ion-item (tap)="openWebsite(Terms)" >Terminos y Condiciones</ion-item>
-    <ion-item (tap)="openWebsite(Security)">Poliza de Seguridad</ion-item>
+    <ion-item (tap)="openWebsite('Canalava')">Mas Informacion</ion-item>
+    <ion-item (tap)="openWebsite('Privacy')" >Terminos y Condiciones</ion-item>
+    <ion-item (tap)="openWebsite('Terms')">Poliza de Seguridad</ion-item>
     <ion-item (tap)="signOut()">Salir</ion-item>
   </ion-list>
 </ion-content>
