--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -46,15 +46,12 @@
       <ion-segment-button value="Grid">
         <ion-icon name="grid"></ion-icon>
       </ion-segment-button>
-      <ion-segment-button value="Map">
-        <ion-icon name="pin"></ion-icon>
-      </ion-segment-button>
     </ion-segment>
   </div>
 
   <div [ngSwitch]="displayMode">
     <ion-list *ngSwitchCase="'List'">
-      <div *ngFor="let content of content.userContent" class="feed">
+      <div *ngFor="let content of content.userContent.reverse()" class="feed">
         <ion-item >
           <ion-avatar item-start>
             <img src={{userData.getSelectedAccount().Img}}>
