--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwPTu_XBkCoq7x_tip5nRTCPZSlGh8HsM&callback=initMap"
+    async defer></script>
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
 
