--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -70,5 +70,8 @@
         </button>
       </div>
     </div>
+    <div *ngSwitchCase="Map">
+      <div #map id='map'></div>
+    </div>
   </div>
 </ion-content>
