--- a/src/pages/services/services.html
+++ b/src/pages/services/services.html
@@ -19,7 +19,7 @@
       <ion-icon name="document" item-start></ion-icon>
       <h2>Tramites</h2>
     </ion-item>
-    <ion-item>
+    <ion-item (tap)="openMagazine()">
       <ion-icon name="book" item-start></ion-icon>
       <h2>Revista</h2>
     </ion-item>
