--- a/src/pages/event-manager/event-manager.html
+++ b/src/pages/event-manager/event-manager.html
@@ -18,7 +18,7 @@
         <div *ngFor="let content of contentArray" class="feed">
           <ion-item (tap) = "openAccount(content.Key)">
             <ion-avatar item-start>
-              <img src="https://pbs.twimg.com/profile_images/948260616388542464/O0JFFzdG_400x400.jpg">
+              <img src="https://firebasestorage.googleapis.com/v0/b/canalava-353c7.appspot.com/o/Icon.png?alt=media&token=6c3a295c-e9e0-43ba-8b8b-75b4d548e647">
             </ion-avatar>
             <h2>Canalava</h2>
             <ion-note item-end>{{content.Timestamp | date}}</ion-note>
