--- a/src/pages/message/message.html
+++ b/src/pages/message/message.html
@@ -47,7 +47,7 @@
   <ion-grid>
     <ion-row>
       <ion-col col-10>
-        <ion-input type="text" placeholder="Type a message" [(ngModel)]="data.Message" name="message"></ion-input>
+        <ion-input type="text" placeholder="Escribe un Mensaje" [(ngModel)]="data.Message" name="message"></ion-input>
       </ion-col>
       <ion-col col-2 (click)="sendMessage()">
         <ion-icon name="paper-plane"></ion-icon>
