--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -8,7 +8,7 @@
 
 <ion-content padding>
   <ion-tabs [selectedIndex]="mySelectedIndex" name="conference">
-    <ion-tab [root]="tab1Root" tabTitle="Main" tabIcon="home"></ion-tab>
+    <ion-tab [root]="tab1Root" tabTitle="Menu" tabIcon="home"></ion-tab>
     <ion-tab [root]="tab2Root" tabTitle="Buscar" tabIcon="search"></ion-tab>
     <ion-tab [root]="tab3Root" tabTitle="Temas" tabIcon="briefcase"></ion-tab>
     <ion-tab [root]="tab4Root" tabTitle="Servicios" tabIcon="add"></ion-tab>
