--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -21,7 +21,7 @@
 <ion-content padding>
   <ion-item>
     <ion-avatar item-start>
-      <img src={{userData.Img}}>
+      <img-loader useImg src={{userData.Img}} fallbackUrl="/assets/imgs/Unknown.png" spinner="true"></img-loader>
     </ion-avatar>
     <h2>{{userData.Name}}</h2>
     <p>Telefono: {{userData.Phone}}</p>
