--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -21,19 +21,19 @@
 <ion-content padding>
   <ion-item *ngIf="userData.userData[selected]">
     <ion-avatar item-start>
-      <img src={{userData.userData[selected].Img}} item-start>
+      <img-loader useImg src={{userData.getSelectedAccount().Img}} fallbackUrl="/assets/imgs/Unknown.png" spinner="true"></img-loader>
     </ion-avatar>
     <h2>{{userData.userData[selected].Name}}</h2>
     <p>Telefono: {{userData.userData[selected].Phone}}</p>
     <button ion-button (tap)="editData()">Editar Informacion</button>
-    
+
   </ion-item>
 
   <ion-list>
     <ion-item>
       <ion-label>Cuentas</ion-label>
-      <ion-select (ionChange)="onChange($event)" >
-        <ion-option value={{i}} *ngFor = "let account of userData.userData; let i = index" [attr.data-index]="i">{{account.Name}}</ion-option>
+      <ion-select (ionChange)="onChange($event)">
+        <ion-option value={{i}} *ngFor="let account of userData.userData; let i = index" [attr.data-index]="i">{{account.Name}}</ion-option>
       </ion-select>
     </ion-item>
   </ion-list>
@@ -57,14 +57,14 @@
       <div *ngFor="let content of data" class="feed">
         <ion-item>
           <ion-avatar item-start>
-            <img src={{userData.getSelectedAccount().Img}}>
+            <img-loader useImg src={{userData.getSelectedAccount().Img}} fallbackUrl="/assets/imgs/Unknown.png" spinner="true"></img-loader>
           </ion-avatar>
           <h2>{{userData.getSelectedAccount().Name}}</h2>
           <button ion-button clear item-end (tap)="presentActionSheet(content)">
             <ion-icon name="more"></ion-icon>
           </button>
         </ion-item>
-        <img src={{content.ImageURL}}>
+        <img-loader useImg src={{content.ImageURL}} fallbackUrl="/assets/imgs/Unknown.png" spinner="true"></img-loader>
         <ion-item no-lines>
           <ion-badge>{{content.likeNumber}} Likes</ion-badge>
           <button ion-button clear (tap)="giveLike(content)">
