--- a/src/pages/temas/temas.html
+++ b/src/pages/temas/temas.html
@@ -17,7 +17,7 @@
   <ion-list>
     <ion-item *ngFor="let tema of temas.Inqury" (tap)="openTema(tema)">
       <ion-avatar item-start>
-          <img-loader useImg src={{tema.Img}} fallbackUrl="/assets/imgs/Unknown.png" spinner="true"></img-loader>
+        <img-loader  src={{tema.Img}} fallbackUrl="/assets/imgs/Unknown.png" useImg [spinner]="true"></img-loader>
       </ion-avatar>
       <h2 text-wrap>{{tema.Name}}</h2>
       <p text-wrap>{{tema.Title}}</p>
