--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -18,7 +18,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding overflow-scroll=“true>
   <ion-item *ngIf="userData.userData[selected]">
     <ion-avatar item-start>
       <img-loader useImg src={{userData.getSelectedAccount().Img}} fallbackUrl="/assets/imgs/Unknown.png" spinner="true"></img-loader>
@@ -61,17 +61,15 @@
       <div *ngFor="let content of content.userContent" class="feed">
         <ion-item>
           <ion-avatar item-start>
-            <img-loader useImg src={{userData.getSelectedAccount().Img}} fallbackUrl="/assets/imgs/Unknown.png" spinner="true" fallbackAsPlaceholder="true"></img-loader>
+            <img src={{userData.getSelectedAccount().Img}}>
           </ion-avatar>
           <h2>{{userData.getSelectedAccount().Name}}</h2>
           <button ion-button clear item-end (tap)="presentActionSheet(content)">
             <ion-icon name="more"></ion-icon>
           </button>
         </ion-item>
-        <video *ngIf="content.isVideo == true"  muted="true" autoplay controls looped width="100%">
-          <source src={{content.ImageURL}} type="video/mp4">
-        </video>
-        <img-loader *ngIf="content.isVideo == false" useImg src={{content.ImageURL}} fallbackUrl="/assets/imgs/Unknown.png" spinner="true" fallbackAsPlaceholder="true"></img-loader>
+        <video *ngIf="content.isVideo == true" [src]=content.ImageURL muted="true"  controls autoplay playsinline webkit-playsinline looped width="100%"></video>
+        <img *ngIf="content.isVideo == false" src={{content.ImageURL}}>
         <ion-item no-lines>
           <ion-badge>{{content.likeNumber}} Likes</ion-badge>
           <button ion-button clear (tap)="giveLike(content)">
@@ -88,7 +86,8 @@
     <div *ngSwitchCase="'Grid'">
       <div class="square" *ngFor="let content of content.userContent">
         <button class="content" (tap)="openPhoto(content)">
-            <img-loader useImg src={{content.ImageURL}} fallbackUrl="/assets/imgs/Unknown.png" [spinner]="true" [fallbackAsPlaceholder]="true"></img-loader>
+          <img *ngIf="content.isVideo == true" src={{content.Thumbnail}}>
+          <img *ngIf="content.isVideo == false" src={{content.ImageURL}}>
         </button>
       </div>
     </div>
