--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -18,7 +18,7 @@
       <img class="slider" src="assets/imgs/region3.png">
     </ion-slide>
   </ion-slides>
-  <div padding class="LoginContainer">
+  <div padding class="LoginContainer" *ngIf="state == 'Login'">
     <ion-item>
       <ion-label color="primary" floating>Email</ion-label>
       <ion-input [(ngModel)]="Email" type="email"></ion-input>
@@ -30,8 +30,7 @@
     <button ion-button class="styleLoginButton" (tap)="LoginWithEmail()">Login</button>
     <div class="Divider"></div>
   </div>
-
-  <div padding class="LoginContainer">
+  <div padding class="LoginContainer" *ngIf="state == 'Login'">
     <label for="Phone">Numero de Telefono</label><br>
     <div padding class="PhoneInput">
       <input type="tel" max="9"     [(ngModel)]="phoneNumber.Country"   class="input" placeholder="52" (keyup)="keyTab($event, 2)">
