--- a/src/pages/main-feed/main-feed.html
+++ b/src/pages/main-feed/main-feed.html
@@ -19,23 +19,23 @@
 
 
 <ion-content>
-  <ion-list>
+  <ion-list *ngIf="content$ | async; let contents; else loading">
     <ion-list>
-      <div *ngFor="let content of content.contentArray" class="feed">
-        <ion-item (tap)="openAccount(content.Key)">
-          <ion-avatar item-start>
-              <img-loader useImg src={{content.Img}} fallbackUrl="/assets/imgs/Unknown.png" spinner="true" ></img-loader>
+      <div *ngFor="let content of contents" class="feed">
+        <ion-item (tap)="openAccount(content.Uploader)" *ngIf="('UserData' + '/' + content.Uploader | doc | async); let data" >
+          <ion-avatar item-start >
+              <img-loader useImg src={{data.ProfileImg}} fallbackUrl="/assets/imgs/Unknown.png" spinner="true" ></img-loader>
           </ion-avatar>
-          <h2>{{content.Name}}</h2>
+          <h2>{{data.Name}}</h2>
         </ion-item>
-        <video *ngIf="content.isVideo == true" [src]=content.ImageURL muted="true" autoplay controls playsinline webkit-playsinline loop width="100%"></video>
-        <img *ngIf="content.isVideo == false" src={{content.ImageURL}}>
+        <video *ngIf="content.isVideo == true" [src]=content.Image muted="true" autoplay controls playsinline webkit-playsinline loop width="100%"></video>
+        <img *ngIf="content.isVideo == false" src={{content.Image}}>
         <ion-item>
           <h2 text-wrap>{{content.Message}}</h2>
           <div item-end>
-            <ion-badge >{{content.likeNumber}} Likes</ion-badge>
+            <ion-badge >{{ ('ContentLikes' + '/' + content.key | doc | async)?.Likes }} Likes</ion-badge>
             <button ion-button clear (tap)="giveLike(content)">
-              <ion-icon *ngIf="content.isImageLiked == false" name="heart-outline"></ion-icon>
+              <ion-icon *ngIf="content.isImageLiked == null || content.isImageLiked == false" name="heart-outline"></ion-icon>
               <ion-icon *ngIf="content.isImageLiked == true" name="heart"></ion-icon>
             </button>
           </div>
@@ -44,4 +44,8 @@
       </div>
     </ion-list>
   </ion-list>
+
+  <ion-infinite-scroll threshold="20%" (ionInfinite)="$event.waitFor(doInfinite())">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
