--- a/src/pages/services/services.html
+++ b/src/pages/services/services.html
@@ -25,11 +25,11 @@
     </ion-item>
     <ion-item (tap)="getData(2)">
       <ion-icon name="bookmark" item-start ></ion-icon>
-      <h2>Capacitacion</h2>
+      <h2>Capacitacíon</h2>
     </ion-item>
     <ion-item (tap)="getData(0)">
       <ion-icon name="create" item-start></ion-icon>
-      <h2>Asesoria</h2>
+      <h2>Asesoría</h2>
     </ion-item>
     <ion-item (tap)="getData(1)">
       <ion-icon name="calendar" item-start></ion-icon>
